# html5svg2

./: .gitignore  .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.py
1_intro/: index.html
2_html/: index.html
3_svg/: index.html
docs/: 1_intro.md  2_html.md  3_svg.md  4_grf.md  index.md
ejemplos/: arco.py  circulo.py  elipse.py  estructura_html.py  grf_xy_01.py  jirish-nazca.json  jirish-nazca.py  linea.py  poligono-regular.py  poligono.py  polilinea.py  rectangulo.py  rotar.py  sistema_coordenadas.py  texto.py  trayectoria.py
html5svg2/: __init__.py  prg.py  utl.py
search/: search_index.json
